# mva-player

./: .gitignore  AGENTS.md  Agent.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: rust.yml
config/: animation.toml  app.toml  audio.toml  lyrics.toml  renderer.toml
crates/mva-audio/: Cargo.toml
crates/mva-audio/src/: error.rs  lib.rs  player.rs
crates/mva-audio/tests/: player_tests.rs
crates/mva-core/: Cargo.toml
crates/mva-core/src/: audio.rs  clock.rs  command.rs  effect.rs  engine.rs  error.rs  lib.rs  loader.rs  state.rs
crates/mva-core/src/config/: animation.rs  app.rs  audio.rs  loader.rs  lyrics.rs  mod.rs
crates/mva-core/tests/: config_tests.rs  engine_tests.rs
crates/mva-format/: Cargo.toml
crates/mva-format/src/: lib.rs  loader.rs  manifest.rs
crates/mva-format/tests/: manifest_tests.rs
crates/mva-lyrics/: Cargo.toml
crates/mva-lyrics/src/: error.rs  lib.rs  lrc.rs  lrc_parser.rs
crates/mva-player/: Cargo.toml
crates/mva-player/src/: cli.rs  demo.rs  main.rs  startup.rs  test_project.rs
crates/mva-player/tests/: demo_showcase.rs  integration_flow.rs
crates/mva-renderer/: Cargo.toml
crates/mva-renderer/src/: config.rs  cull.rs  draw.rs  layout.rs  lib.rs  viewport.rs
crates/mva-renderer/tests/: renderer_tests.rs
crates/mva-scene/: Cargo.toml
crates/mva-scene/src/: colour.rs  effect_ir.rs  layer.rs  lib.rs  scene.rs  transform.rs  units.rs
crates/mva-scene/tests/: scene_contract.rs
crates/mva-timeline/: Cargo.toml
crates/mva-timeline/src/: lib.rs
crates/mva-timeline/src/eval/: easing.rs  effect.rs  interpolate.rs  lyric.rs  mod.rs  scene.rs  track.rs
crates/mva-timeline/src/model/: animation.rs  audio.rs  lyric.rs  mod.rs  project.rs  track.rs  units.rs
crates/mva-timeline/tests/: eval_contract.rs  model_contract.rs  phase3_effect_tests.rs  phase3_layer_tests.rs
crates/mva-types/: Cargo.toml
crates/mva-types/src/: asset.rs  audio.rs  effect.rs  lib.rs  lyric.rs  metadata.rs  track.rs  units.rs
crates/mva-types/tests/: phase3_contract.rs
crates/mva-ui/: Cargo.toml
crates/mva-ui/src/: app.rs  lib.rs  painter.rs
crates/mva-ui/src/panels/: controls.rs  info.rs  mod.rs  settings.rs  viewport.rs
docs/: api.md  architecture.md  demo-assets.md  dependencies.md  phase2-architecture.md  phase3-architecture.md  phase4-architecture.md  phase4-m3-design.md  phase4-m4-design.md  phase4-m5-design.md  project-status.md  renderer-design.md  research.md  roadmap.md  specification.md  ui-architecture.md
examples/lyric_demo/: README.md  demo.mva  lyrics.lrc
examples/lyric_demo/assets/: lyric.anim.json
