[workspace]
resolver = "3"
members = [
    "crates/mva-types",
    "crates/mva-timeline",
    "crates/mva-core",
    "crates/mva-audio",
    "crates/mva-scene",
    "crates/mva-renderer",
    "crates/mva-ui",
    "crates/mva-player",
    "crates/mva-lyrics",
    "crates/mva-format",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
rodio = "0.22"
walkdir = "2"
lrc = "0.2"
egui = "0.35"
eframe = "0.35"
